fix #2598: Updated styles and components to better handle text overflow. This improved organization of components and made space for longer strings without overflowing containers or breaking other component positions. Also, organized contact information in the OrganizationContacts.tsx file to improve reading flow and visibility.

--- a/packages/apps/spaces/components/ui-kit/atoms/address/address.module.scss
+++ b/packages/apps/spaces/components/ui-kit/atoms/address/address.module.scss
@@ -1,11 +1,11 @@
 .addressContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   margin-top: var(--spacing-xs);
   font-size: 0.95rem;
   line-height: 1rem;
   color: var(--gray-700);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &:not(:last-of-type) {
     padding-bottom: var(--spacing-xs);
