--- a/packages/apps/spaces/ui/presentation/table/Table.module.scss
+++ b/packages/apps/spaces/ui/presentation/table/Table.module.scss
@@ -61,6 +61,7 @@ $width: calc(
 
 .rowCell {
   text-overflow: ellipsis;
+  overflow: hidden;
   white-space: nowrap;
   word-break: keep-all;
   padding-left: var(--spacing-xs);
